<resources>
    <string name="app_name">Mobile 2017 1C</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Compartir</string>
    <string name="otro">Otro</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_share" />
    <string name="action_login">Log in</string>
    <string name="action_logout">Log out</string>
    <string name="default_drawer_message">Hi there</string>
    <string name="default_drawer_mail" />
    <string name="alt_text_profile_pic">Profile Pic</string>
    <string name="log_out">Log out</string>
    <string name="send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="tools">Tools</string>
    <string name="slideshow">Slideshow</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Cámara</string>
    <string name="connecting">Conectando...</string>
    <string name="channels">Channels</string>
    <string name="user_typing">%s está tipeando...</string>

    <string name="termsAndConditions">Términos y Condiciones</string>
    <string name="acceptMenu">Aceptar</string>
    <string name="dontAcceptMenu">No aceptar</string>
    <string name="accept">Aceptaste los términos y condiciones. Grosso.</string>
    <string name="dontAccept">Aceptá los terminos y condiciones, dale.</string>
    <string name="photo_gallery">Galería</string>

    <string name="readStorageRequired">Requiere acceso de lectura al almacenamiento externo.</string>
    <string name="hello">Hola</string>
    <string name="hello_toast">Hola como andas?</string>
    <string name="from_url">Desde URL</string>
    <string name="Notifications">Notificaciones</string>
    <string name="premium">Premium</string>
    <string name="placeholder_loading">Cargando</string>
    <string name="connection_error">Connection error</string>
    <string name="placeholder_release_date">Estreno:  %1$s</string>

    <string name="appwidget_text">Probando</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>

    <string name="widget_0">Este es un widget</string>
    <string name="widget_1">que se actualiza</string>
    <string name="widget_2">al tocar el botón</string>
    <string name="widget_3">acá cambió todo</string>
    <string name="widget_4">y acá volvió a quedar</string>
    <string name="widget_5">y acá se acabó.</string>

    <string name="insert_topic">Ingresar Topic</string>
    <string name="subscribe">Suscribirse</string>
    <string name="unsubscribe">Desubscribirse</string>
    <string name="firebase_token_id">Firebase Token ID</string>
    <string name="loading">Cargando...</string>
    <string name="user_id">User ID</string>
    <string name="sesion_not_initiated">Sesión no iniciada</string>
</resources>
