<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ar.edu.utn.frba.myapplication.NotificationsFragment">

    <EditText android:id="@+id/topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_topic"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/suscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscribe"/>
        <Button android:id="@+id/unsuscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unsubscribe"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/firebase_token_id"/>
    <EditText
        android:id="@+id/token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/user_id"/>
    <EditText
        android:id="@+id/userId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sesion_not_initiated"/>
</LinearLayout>
