<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ar.edu.utn.frba.myapplication.MainFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment" />
    <EditText android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"/>
    <Button android:id="@+id/otroButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otro"/>
    <Button android:id="@+id/termsAndConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/termsAndConditions"/>

</LinearLayout>
